2000-11-01  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 06.

	* lisp/gnus.el (gnus-product-variable-file-list): Check for
	`emacs-version' in the file "cache" as well.
	* lisp/gnus-start.el (gnus-product-read-variable-file-1): Make it
	talkative.

2000-10-31  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el: Bind `:key-type' and `:value-type' for old
	Emacsen.

2000-10-31  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lisp/ptexinfmt.el (texinfo-format-direntry): Fixed broken
	direntry generate probrem.
	(Advised by Tetsuo Tsukamoto <czkmt@remus.dti.ne.jp>)

2000-10-31  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-summary-insert-line): Work with quoted
	double-quote characters.
	(gnus-summary-prepare-threads): Ditto.

2000-10-30  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lisp/ptexinfmt.el (ptexinfmt-disable-broken-notice-flag): Renamed
	from `ptexinfmt-disable-broken-notice'.

2000-10-27  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* lisp/ptexinfmt.el (texinfo-format-printindex): Mule for Windows
	detection fixed.

2000-10-26  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-group-startup-message): Rewrite for Emacs 21.
	* lisp/lpath.el: Fbind `propertize'.

2000-10-22  Katsuhiro Hermit Endo <hermit@tomato.saino.ne.jp>

	* texi/gnus-ja.texi (Changing Servers): Fix typo.

2000-10-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-netbsd-get-headers): Fix regular
	expression to extract xover urls.

2000-10-12  Jesper Harder <jesper_harder@hotmail.com>

	* make.bat: Makes it possible to generate the Info files on
	windows again.

2000-10-11  Katsumi Yamaoka <yamaoka@jpl.org>

	* Makefile.in (info-ja, xinfo-ja): No need to use `MAKEINFO=no'.
	(install-info-ja, install-info, install-lisp, install-ja): New
	targets (possibly for FSF Emacsen).

	* texi/Makefile.in (install-ja-info, install-info, install-ja,
	%-ja.info, %-ja): New targets.
